--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,4 @@
-/*  your css code here. If applicable */
+table {
+            background-color: yellow;
+            border: 1px solid black
+        }
